@@ -59,6 +59,9 @@ New Features
 13.SOLR-980:  A PlainTextEntityProcessor which can read from any DataSource<Reader> and output a String.
               (Nathan Adams, Noble Paul via shalin)
 
+14.SOLR-1003: XPathEntityprocessor must allow slurping all text from a given xml node and its children.
+              (Noble Paul via shalin)
+
 Optimizations
 ----------------------
 1. SOLR-846:  Reduce memory consumption during delta import by removing keys when used
